# my_LPR

./: CMakeLists.txt  LPR.kdev4  main.cpp
.kdev4/: LPR.kdev4
ANN/: CMakeLists.txt  main.cpp
ANN/.kdev4/: ANN.kdev4
ANN/charSamples/0/: .directory
ANN/charSamples/1/: .directory
ANN/charSamples1/3/: .directory
ANN/charSamples1/5/: .directory
ANN/charSamples1/6/: .directory
ANN/charSamples1/7/: .directory
ANN/charSamples1/9/: .directory
ANN/charSamples1/A/: .directory
ANN/charSamples1/E/: .directory
ANN/charSamples1/F/: .directory
ANN/charSamples1/M/: .directory
ANN/charSamples1/P/: .directory
ANN/charSamples1/Q/: .directory
ANN/charSamples1/R/: .directory
ANN/charSamples1/W/: .directory
ANN/charSamples1/X/: .directory
ANN/charSamples1/Z/: .directory
ANN/charSamples2/2/: .directory
ANN/charSamples2/4/: .directory
ANN/charSamples2/8/: .directory
ANN/charSamples2/B/: .directory
ANN/charSamples2/C/: .directory
ANN/charSamples2/D/: .directory
ANN/charSamples2/G/: .directory
ANN/charSamples2/H/: .directory
ANN/charSamples2/J/: .directory
ANN/charSamples2/K/: .directory
ANN/charSamples2/L/: .directory
ANN/charSamples2/N/: .directory
ANN/charSamples2/S/: .directory
ANN/charSamples2/T/: .directory
ANN/charSamples2/U/: .directory
ANN/charSamples2/V/: .directory
ANN/charSamples2/Y/: .directory
detect_picture/: .directory
